Carousel: Fix overdflowing text on no-js view on narrow screens

--- a/cfgov/unprocessed/css/organisms/carousel.less
+++ b/cfgov/unprocessed/css/organisms/carousel.less
@@ -280,9 +280,12 @@
   &_item {
     display: block;
     width: auto;
-    height: 300px;
     border-bottom: 1px solid @gray-40;
     position: static;
+  }
+
+  &_item-visual {
+    height: 300px;
   }
 
   &_btn,
